add rest controller